<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:id="@+id/background_main"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/background_and"
        android:contentDescription="@string/background_mian"
        android:scaleType="matrix"
        android:visibility="visible"
        android:layout_alignParentLeft="true" />

    <TextView
        android:id="@+id/oldpassword"
        style="@style/BlackText"
        android:layout_width="80dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="154dp"
        android:text="旧密码："
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="20dp" />
    <TextView
        android:id="@+id/newpassword"
        style="@style/BlackText"
        android:layout_alignRight="@id/oldpassword"
        android:layout_width="80dp"
        android:layout_below="@id/oldpassword"
        android:text="新密码：" />
    <TextView
        android:id="@+id/confirmnewpsd"
        android:layout_alignRight="@id/oldpassword"
        style="@style/BlackText"
        android:layout_width="80dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/newpassword"
        android:text="确认密码："
         />

    <EditText
        android:id="@+id/write_oldpassword"
        style="@style/EditText"
        android:textColor="@color/black"
        android:layout_alignBottom="@+id/oldpassword"
        android:hint="请输入旧密码"
        android:background="@drawable/edit_bg"
        android:inputType="numberPassword"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@id/oldpassword" />

    <EditText
        android:id="@+id/write_newpassword"
        style="@style/EditText"
        android:textColor="@color/black"
        android:layout_alignBottom="@+id/newpassword"
        android:layout_alignLeft="@+id/write_oldpassword"
        android:hint="请输入新密码"
        android:background="@drawable/edit_bg"
        android:inputType="numberPassword"
         />
    <EditText
        android:id="@+id/confirnewpsd"
        style="@style/EditText"
        android:textColor="@color/black"
        android:background="@drawable/edit_bg"
        android:layout_alignLeft="@+id/write_newpassword"
        android:inputType="numberPassword"
        android:layout_alignBottom="@+id/confirmnewpsd"
        android:layout_marginTop="20dp"
        android:hint="@string/confirmpsd"

        />

    <Button
        android:id="@+id/buttonConfirmChange"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_below="@id/confirmnewpsd"
        android:layout_marginTop="70dp"
        android:fontFamily="@font/test"
        android:text="@string/confirchange" />

</RelativeLayout>
